--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.0.0",
     "@nestjs/graphql": "^7.3.7",
+    "@nestjs/mapped-types": "^1.2.2",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
     "apollo-server-express": "^2.14.2",
@@ -38,6 +39,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
+    "swagger": "^0.7.5",
     "typeorm": "^0.2.24"
   },
   "devDependencies": {
